--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.java linguist-detectable=false
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
+*.css linguist-detectable=false
