--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.csharp linguist-detectable=true
 *.js linguist-detectable=false
 *.html linguist-detectable=false
+*.css linguist-detectable=false
