--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-
+*.csharp linguist-detectable=true
+*.java linguist-detectable=false
 *.js linguist-detectable=false
 *.html linguist-detectable=false
-*.css linguist-detectable=false
-*.csharp linguist-detectable=true
+*.xml linguist-detectable=false
