--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.html linguist-detectable=false
+*.cshtml linguist-detectable=false
 *.csharp linguist-detectable=true
 *.js linguist-detectable=false
 *.css linguist-detectable=false
